--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sharp": "^0.34.4"
   },
   "dependencies": {
+    "check-disk-space": "^3.4.0",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.6.2"
   },
